--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -3,19 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "interpreted-marijuana",
+   "id": "tropical-suspension",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\"is not\" with a literal. Did you mean \"!=\"?\n",
-      "\"is\" with a literal. Did you mean \"==\"?\n",
-      "\"is\" with a literal. Did you mean \"==\"?\n",
-      "\"is not\" with a literal. Did you mean \"!=\"?\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -68,6 +58,9 @@
     "%matplotlib inline\n",
     "sns.set_style('whitegrid')\n",
     "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import brier_score_loss\n",
+    "\n",
     "import xgboost\n",
     "import shap\n",
     "shap.initjs()"
@@ -76,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "touched-placement",
+   "id": "vulnerable-louisville",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "opening-mason",
+   "id": "laughing-drive",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfied-turning",
+   "id": "purple-adelaide",
    "metadata": {},
    "source": [
     "# Problem 1"
@@ -257,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifth-experiment",
+   "id": "completed-vampire",
    "metadata": {},
    "source": [
     "## 1a"
@@ -265,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-plenty",
+   "id": "earned-jumping",
    "metadata": {},
    "source": [
     "### i"
@@ -273,8 +266,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "progressive-roads",
+   "execution_count": 4,
+   "id": "baking-arnold",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "subsequent-armstrong",
+   "execution_count": 5,
+   "id": "solar-premises",
    "metadata": {
     "scrolled": false
    },
@@ -364,8 +357,8 @@
        "      <th>AS</th>\n",
        "      <th>HST</th>\n",
        "      <th>...</th>\n",
+       "      <th>home_xG</th>\n",
        "      <th>away_xG</th>\n",
-       "      <th>id</th>\n",
        "      <th>game_id</th>\n",
        "      <th>HomeOrAway</th>\n",
        "      <th>Team</th>\n",
@@ -390,8 +383,8 @@
        "      <td>6</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.394458</td>\n",
        "      <td>1.059770</td>\n",
-       "      <td>5692</td>\n",
        "      <td>5692</td>\n",
        "      <td>AwayTeam</td>\n",
        "      <td>Ajaccio GFCO</td>\n",
@@ -414,8 +407,8 @@
        "      <td>8</td>\n",
        "      <td>6</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.584010</td>\n",
        "      <td>0.150143</td>\n",
-       "      <td>5704</td>\n",
        "      <td>5704</td>\n",
        "      <td>AwayTeam</td>\n",
        "      <td>Ajaccio GFCO</td>\n",
@@ -438,8 +431,8 @@
        "      <td>9</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.384935</td>\n",
        "      <td>1.156780</td>\n",
-       "      <td>5707</td>\n",
        "      <td>5707</td>\n",
        "      <td>HomeTeam</td>\n",
        "      <td>Ajaccio GFCO</td>\n",
@@ -462,8 +455,8 @@
        "      <td>12</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.756427</td>\n",
        "      <td>0.397943</td>\n",
-       "      <td>5719</td>\n",
        "      <td>5719</td>\n",
        "      <td>AwayTeam</td>\n",
        "      <td>Ajaccio GFCO</td>\n",
@@ -486,8 +479,8 @@
        "      <td>13</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.970684</td>\n",
        "      <td>2.982130</td>\n",
-       "      <td>5733</td>\n",
        "      <td>5733</td>\n",
        "      <td>HomeTeam</td>\n",
        "      <td>Ajaccio GFCO</td>\n",
@@ -499,7 +492,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -510,12 +503,12 @@
        "14849  Ligue_1  2015-08-29  15     1     0     1     0  13  12    5  ...   \n",
        "5733   Ligue_1  2015-09-13  15     0     1     0     1  24  13    4  ...   \n",
        "\n",
-       "        away_xG    id  game_id  HomeOrAway          Team isHomeTeam GD  \\\n",
-       "14822  1.059770  5692     5692    AwayTeam  Ajaccio GFCO      False  0   \n",
-       "14834  0.150143  5704     5704    AwayTeam  Ajaccio GFCO      False -2   \n",
-       "5707   1.156780  5707     5707    HomeTeam  Ajaccio GFCO       True -2   \n",
-       "14849  0.397943  5719     5719    AwayTeam  Ajaccio GFCO      False -1   \n",
-       "5733   2.982130  5733     5733    HomeTeam  Ajaccio GFCO       True -1   \n",
+       "        home_xG   away_xG  game_id  HomeOrAway          Team isHomeTeam  GD  \\\n",
+       "14822  0.394458  1.059770     5692    AwayTeam  Ajaccio GFCO      False   0   \n",
+       "14834  1.584010  0.150143     5704    AwayTeam  Ajaccio GFCO      False  -2   \n",
+       "5707   0.384935  1.156780     5707    HomeTeam  Ajaccio GFCO       True  -2   \n",
+       "14849  0.756427  0.397943     5719    AwayTeam  Ajaccio GFCO      False  -1   \n",
+       "5733   0.970684  2.982130     5733    HomeTeam  Ajaccio GFCO       True  -1   \n",
        "\n",
        "            CGD  GameCount      LCGD  \n",
        "14822  0.000000          0  0.000000  \n",
@@ -524,10 +517,10 @@
        "14849 -1.250000          3 -1.333333  \n",
        "5733  -1.200000          4 -1.250000  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,8 +532,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "acquired-comparative",
+   "execution_count": 6,
+   "id": "utility-deadline",
    "metadata": {},
    "outputs": [
     {
@@ -575,8 +568,8 @@
        "      <th>AS</th>\n",
        "      <th>HST</th>\n",
        "      <th>...</th>\n",
+       "      <th>home_xG</th>\n",
        "      <th>away_xG</th>\n",
-       "      <th>id</th>\n",
        "      <th>game_id</th>\n",
        "      <th>HomeOrAway</th>\n",
        "      <th>Team</th>\n",
@@ -601,8 +594,8 @@
        "      <td>7</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
+       "      <td>2.252640</td>\n",
        "      <td>0.190301</td>\n",
-       "      <td>6449</td>\n",
        "      <td>6449</td>\n",
        "      <td>AwayTeam</td>\n",
        "      <td>Amiens</td>\n",
@@ -625,8 +618,8 @@
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.705642</td>\n",
        "      <td>1.473760</td>\n",
-       "      <td>6457</td>\n",
        "      <td>6457</td>\n",
        "      <td>HomeTeam</td>\n",
        "      <td>Amiens</td>\n",
@@ -649,8 +642,8 @@
        "      <td>16</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.176240</td>\n",
        "      <td>1.069470</td>\n",
-       "      <td>6470</td>\n",
        "      <td>6470</td>\n",
        "      <td>AwayTeam</td>\n",
        "      <td>Amiens</td>\n",
@@ -673,8 +666,8 @@
        "      <td>12</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.329200</td>\n",
        "      <td>0.247748</td>\n",
-       "      <td>6476</td>\n",
        "      <td>6476</td>\n",
        "      <td>HomeTeam</td>\n",
        "      <td>Amiens</td>\n",
@@ -697,8 +690,8 @@
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.599748</td>\n",
        "      <td>0.293267</td>\n",
-       "      <td>6490</td>\n",
        "      <td>6490</td>\n",
        "      <td>AwayTeam</td>\n",
        "      <td>Amiens</td>\n",
@@ -710,7 +703,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -721,24 +714,24 @@
        "6476   Ligue_1  2017-08-26  17     3     0     2     0  12  12    4  ...   \n",
        "15620  Ligue_1  2017-09-09  17     0     1     0     1  10   8    3  ...   \n",
        "\n",
-       "        away_xG    id  game_id  HomeOrAway    Team isHomeTeam GD       CGD  \\\n",
-       "15579  0.190301  6449     6449    AwayTeam  Amiens      False -2 -2.000000   \n",
-       "6457   1.473760  6457     6457    HomeTeam  Amiens       True -2 -2.000000   \n",
-       "15600  1.069470  6470     6470    AwayTeam  Amiens      False -3 -2.333333   \n",
-       "6476   0.247748  6476     6476    HomeTeam  Amiens       True  3 -1.000000   \n",
-       "15620  0.293267  6490     6490    AwayTeam  Amiens      False  1 -0.600000   \n",
+       "        home_xG   away_xG  game_id  HomeOrAway    Team isHomeTeam  GD  \\\n",
+       "15579  2.252640  0.190301     6449    AwayTeam  Amiens      False  -2   \n",
+       "6457   0.705642  1.473760     6457    HomeTeam  Amiens       True  -2   \n",
+       "15600  3.176240  1.069470     6470    AwayTeam  Amiens      False  -3   \n",
+       "6476   1.329200  0.247748     6476    HomeTeam  Amiens       True   3   \n",
+       "15620  0.599748  0.293267     6490    AwayTeam  Amiens      False   1   \n",
        "\n",
-       "       GameCount      LCGD  \n",
-       "15579          0  0.000000  \n",
-       "6457           1 -2.000000  \n",
-       "15600          2 -2.000000  \n",
-       "6476           3 -2.333333  \n",
-       "15620          4 -1.000000  \n",
+       "            CGD  GameCount      LCGD  \n",
+       "15579 -2.000000          0  0.000000  \n",
+       "6457  -2.000000          1 -2.000000  \n",
+       "15600 -2.333333          2 -2.000000  \n",
+       "6476  -1.000000          3 -2.333333  \n",
+       "15620 -0.600000          4 -1.000000  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,8 +743,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "pressing-grave",
+   "execution_count": 7,
+   "id": "expressed-practitioner",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +927,7 @@
        "2014-09-13 7197    Serie_A 14         1        1                   4.0  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cutting-cowboy",
+   "id": "saving-gilbert",
    "metadata": {},
    "source": [
     "### ii"
@@ -962,8 +955,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "skilled-progress",
+   "execution_count": 8,
+   "id": "adjustable-certification",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1150,7 @@
        "2017-04-26 2989    La_Liga    16              2.411825  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tired-million",
+   "id": "developing-cooperation",
    "metadata": {},
    "source": [
     "### iii\n",
@@ -1179,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limited-bookmark",
+   "id": "quick-devices",
    "metadata": {},
    "source": [
     "## 1b"
@@ -1187,8 +1180,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "medium-counter",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.16781542]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['HomeTeamWin'] = df['FTHG'] > df['FTAG']\n",
+    "train = df[df['Date'] < '2018-01-01']\n",
+    "\n",
+    "X = np.ones_like(train['HomeTeamWin']).reshape(-1, 1)\n",
+    "y = train['HomeTeamWin']\n",
+    "\n",
+    "lr = LogisticRegression(fit_intercept=False)\\\n",
+    "    .fit(X=X, y=y)\n",
+    "\n",
+    "lr.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "everyday-syntax",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24824590314670295"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate brier score\n",
+    "pred = lr.predict_proba(X)[:,1]\n",
+    "brier_score_loss(y, pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "shared-prompt",
+   "metadata": {},
+   "source": [
+    "## 1c\n",
+    "No, the intercept does not have to be positive. A game can result in a home team win, an away team win, or a draw. For the home team to be favored, the home team wins should be higher than the away team wins. For the intercept to be greater than 0, the home team wins must exceed the away team wins *and* the draws.\n",
+    "\n",
+    "The target variable, whether the home team wins, has a natural occurrence rate of 45.84%; the rest are away team wins or draws. When we split the target variable into home team wins, away team wins, and draws, we see that home team winrate does exceed away team winrate as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "tested-humor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HomeTeamWin    4165\n",
+       "AwayTeamWin    2678\n",
+       "Draw           2287\n",
+       "Name: Outcome, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['GD'] = df['FTHG'] - df['FTAG']\n",
+    "df['Outcome'] = np.where(df['GD'] > 0, \n",
+    "                         'HomeTeamWin',\n",
+    "                         np.where(df['GD'] == 0, 'Draw',\n",
+    "                             'AwayTeamWin'))\n",
+    "df['Outcome'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "architectural-fight",
+   "metadata": {},
+   "source": [
+    "## 1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fossil-cuisine",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "merging between different levels can give an unintended result (1 levels on the left,2 on the right)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.73361515,  0.78440468]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_merged = pd.merge(left=train, \n",
+    "         right=answer, \n",
+    "         left_on='game_id', \n",
+    "         right_on='game_id', \n",
+    "         how='inner')\n",
+    "\n",
+    "X = train_merged[[('LCGD', 'AwayTeam'), ('LCGD', 'HomeTeam')]]\n",
+    "X.columns = ['LCGD_AWAY', 'LCGD_HOME']\n",
+    "\n",
+    "lr_with_lcgd = LogisticRegression()\n",
+    "lr_with_lcgd.fit(X=X, y=y)\n",
+    "\n",
+    "lr_with_lcgd.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "parallel-farmer",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22094748510901424"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = lr_with_lcgd.predict_proba(X)[:,1]\n",
+    "brier_score_loss(y, pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "czech-integral",
+   "metadata": {},
+   "source": [
+    "# Problem 2: Bakeoff"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "decimal-engineer",
+   "id": "soviet-asset",
    "metadata": {},
    "outputs": [],
    "source": []
